Use relative path for project directory

--- a/.github/workflows/fairci-action.yaml
+++ b/.github/workflows/fairci-action.yaml
@@ -5,7 +5,7 @@ jobs:
       runs-on: ubuntu-latest
       steps:
         - name: Create pretend project
-          run: mkdir -p my_project
+          run: mkdir my_project
         - uses: FAIRDataPipeline/fair-setup-action@testing
           with:
             cmd: run
