--- a/.github/workflows/fairci-action.yaml
+++ b/.github/workflows/fairci-action.yaml
@@ -15,7 +15,7 @@ jobs:
             ref: kzscisoft/fix-binary-wrong-python-venv
         - name: Run Hello World!
           run: |
-            ls $GITHUB_WORKSPACE/fair-cli/bin/
+            fair create
             fair run --script 'echo "Hello World!"'
             fair log
           working-directory: my_project
