--- a/.github/workflows/fairci-action.yaml
+++ b/.github/workflows/fairci-action.yaml
@@ -15,7 +15,7 @@ jobs:
             ref: kzscisoft/fix-binary-wrong-python-venv
         - name: Run Hello World!
           run: |
-            fair create
-            fair run --script 'echo "Hello World!"'
+            fair create --debug
+            fair run --script 'echo "Hello World!"' --debug
             fair log
           working-directory: my_project
