Allow uncommitted changes

--- a/.github/workflows/fairci-action.yaml
+++ b/.github/workflows/fairci-action.yaml
@@ -17,8 +17,7 @@ jobs:
           run: |
             git remote add origin ${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}.git
             git fetch --all
-            git checkout main
             fair create --debug
-            fair run --script 'echo "Hello World!"' --debug
+            fair run --script 'echo "Hello World!"' --dirty
             fair log
           working-directory: my_project
