--- a/.github/workflows/fairci-action.yaml
+++ b/.github/workflows/fairci-action.yaml
@@ -12,7 +12,7 @@ jobs:
             directory: my_project
             local_registry: local_registry
             remote_registry: remote_registry
-            ref: kzscisoft/fix-binary-wrong-python-venv
+            ref: develop
         - name: Run Hello World!
           run: |
             git remote add origin ${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}.git || true
